# gas-forecast

./: DATASHEET.md  Makefile  PUB ids.txt  README.md  data_sheet.md  model_card.md  pyproject.toml
data/raw/: 2020-05.csv  2020-06.csv  2020-07.csv  2020-08.csv  2020-09.csv  2020-10.csv  2020-11.csv  2020-12.csv  2021-01.csv  2021-02.csv  2021-03.csv  2021-04.csv  2021-05.csv  2021-06.csv  2021-07.csv  2021-08.csv  2021-09.csv  2021-10.csv  2021-11.csv  2021-12.csv  2022-01.csv  2022-02.csv  2022-03.csv  2022-04.csv  2022-05.csv  2022-06.csv  2022-07.csv  2022-08.csv  2022-09.csv  2022-10.csv  2022-11.csv  2022-12.csv  2023-01.csv  2023-02.csv  2023-03.csv  2023-04.csv  2023-05.csv  2023-06.csv  2023-07.csv  2023-08.csv  (+20 more)
docs/: API Data Item List v2.3.2_0.xlsx  mkdocs.yml
docs/docs/: index.md
models/: SAP_best_rf.joblib  SMPBuy_best_rf.joblib  SMPSell_best_rf.joblib
notebooks/: Gas.ipynb
